# rag-project

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  start_ollama.sh
.github/workflows/: build-backend.yaml  build-bot.yaml  build-docker.yaml
backend/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  docker-compose.yaml  import_notion.py  main.py  manage_vectordb.py  models.py  pgvector-compose.yaml  pyproject.toml
backend/RAG/: vectordb.py
backend/notion/: notion_exporter.py  notion_page_exporter.py
bot/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  config.json.example  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
bot/src/: config.ts  deploy-commands.ts  index.ts  utils.ts
bot/src/commands/basic/: ping.ts
bot/src/commands/rag/: export.ts  query.ts  stats.ts
bot/src/commands/utility/: export.ts
bot/src/utils/: discordUtils.ts  messageUtils.ts  queryUtils.ts
postgres/: init.sql
