[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "torch>=2.8.0",
    "llama-index>=0.14.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-vector-stores-postgres>=0.6.6",
    "llama-index-llms-ollama>=0.7.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
