[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "torch>=2.8.0",
    "llama-index-core>=0.14.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-vector-stores-postgres>=0.6.6",
    "llama-index-llms-ollama>=0.7.2",
    "llama-index-llms-openai>=0.6.1",
    "sqlalchemy>=2.0.43",
    "llama-index-tools-requests>=0.5.1",
    "llama-index-tools-openapi>=0.5.1",
    "jsonschema>=4.25.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
